# HousingOmbudsmanData

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MASTERPLAN.md  PROJECT-STATUS.md  README.md  build_complaints_db.py  build_insights_db.py  build_predictive_db.py  housing_ombudsman.odcs.yaml  housing_ombudsman.odps.yaml  official_severe_findings.json  ombudsman_complaints_findings.csv  pyproject.toml  scraper.py  section_splitter.py  train_model.py  urls.txt  verify_against_official.py  verify_complaints_db.py  verify_db.py  verify_insights.py  verify_predictive_db.py
.claude/: settings.json
.claude/hooks/: protect-files.sh  restrict-commands.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
.github/workflows/: ci.yml  pr-check.yml
docs/: ACCESSIBILITY.md  DATA-STANDARDS.md  GLOSSARY.md  SECURITY.md  TESTING.md  ontology.md
docs/architecture/adr/: 001-sqlite-storage-and-heuristic-compilation.md
docs/guides/: ai-assisted-dev.md  first-contribution.md  getting-started.md
docs/superpowers/plans/: 2026-06-21-parsing-pipeline-improvements.md
scripts/: health-check.ps1  health-check.sh  setup.ps1  setup.sh  start-dev.ps1  start-dev.sh
tests/: test_classify_category.py  test_compile_finding_merge.py  test_compile_integration.py  test_extract_compensation.py  test_extract_orders_remedies.py  test_extract_pairs.py  test_extraction_functions.py  test_model.py  test_parse_determinations.py  test_predictive_db.py  test_schema.py  test_section_helpers.py  test_section_splitter.py  test_verify_insights.py
