[project]
name = "housing-ombudsman-data"
version = "0.1.0"
description = "UK Housing Ombudsman decisions dataset scraper and insights compiler"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
]

[tool.setuptools]
py-modules = ["scraper", "build_insights_db", "section_splitter", "verify_db", "verify_insights", "build_complaints_db", "verify_complaints_db", "verify_against_official", "build_predictive_db", "verify_predictive_db"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[project.scripts]
scrape = "scraper:main"
build-insights = "build_insights_db:main"
verify-decisions = "verify_db:main"
verify-insights = "verify_insights:main"
build-complaints = "build_complaints_db:build_database"
verify-complaints = "verify_complaints_db:main"
verify-official = "verify_against_official:main"
build-predictive = "build_predictive_db:main"
verify-predictive = "verify_predictive_db:main"
